# lesser

./: .env  .env.dev  .gitignore  CLAUDE.md  CODE_REFACTOR_PLAN.md  DOCKER_SETUP_COMPLETED.md  FIXES_SUMMARY.md  README.md  REFACTOR_SUMMARY.md  TODO.md  UI_REDESIGN_SUMMARY.md  buf.yaml  dev.sh  docker-compose.dev.yml  docker-compose.gateway.yml  docker-compose.prod.yml  prod.sh  pubspec.yaml  start-all.sh  start-backend.sh  start-dev.sh  start-frontend.sh
backend/django_code/: .env  .my_pgpass  .pg_service.conf  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml
backend/django_code/app/chat/: models.py  serializers.py  urls.py  views.py
backend/django_code/app/chat/migrations/: 0001_initial.py
backend/django_code/app/content/: urls.py
backend/django_code/app/content/migrations/: 0001_initial.py
backend/django_code/app/content/models/: __init__.py  articles.py  base.py  column.py  drafts.py  posts.py  reels.py  story.py
backend/django_code/app/content/serializers/: __init__.py  articles.py  base.py  column.py  drafts.py  interactions.py  posts.py  reels.py  story.py
backend/django_code/app/content/views/: __init__.py  articles.py  base.py  column.py  drafts.py  interactions.py  posts.py  reels.py  story.py
backend/django_code/app/friend/: apps.py  models.py  urls.py
backend/django_code/app/friend/migrations/: 0001_initial.py
backend/django_code/app/users/: admin.py  models.py  views.py
backend/django_code/app/users/migrations/: 0001_initial.py  0002_customuser_birthday_customuser_followers_count_and_more.py  0003_alter_customuser_id.py
backend/django_code/app/users/models/: models.py
backend/django_code/app/users/tests/: test_auth_properties.py
backend/django_code/app/users/urls/: urls.py
backend/django_code/app/users/views/: views.py
backend/django_code/feeds/: models.py  serializers.py  urls.py  views.py
backend/django_code/feeds/migrations/: 0001_initial.py
backend/django_code/lesser/: asgi.py  settings.py  urls.py  wsgi.py
backend/django_code/lesser/config/: wsgi.py
backend/django_code/lesser/social/: admin.py
backend/django_code/lesser/social/migrations/: 0002_post_images_json_post_location.py
backend/django_code/lesser_root_folder/: asgi.py  settings.py  test_settings.py  test_urls.py  urls.py  wsgi.py
backend/django_code/polls/: views.py
backend/django_code/scripts/: run_grpc_server.sh
backend/django_code/users/: urls.py  views.py
infra/cli/: Cargo.toml  README.md
infra/cli/src/: cli.rs  error.rs  main.rs
infra/cli/src/commands/: bash.rs  build.rs  check.rs  clean.rs  completion.rs  db.rs  enter.rs  env.rs  hosts.rs  init.rs  logs.rs  migrate.rs  mock.rs  mod.rs  prod.rs  proto.rs  restart.rs  shell.rs  start.rs  status.rs  stop.rs  test.rs  update.rs  urls.rs
infra/cli/src/commands/test/: auth.rs  channel.rs  chat.rs  comment.rs  content.rs  database.rs  gateway.rs  grpc.rs  integration.rs  mod.rs  (+8 more)
infra/cli/src/config/: env.rs  mod.rs  paths.rs
infra/cli/src/docker/: compose.rs  health.rs  mod.rs
infra/cli/src/ui/: mod.rs  output.rs  progress.rs  prompt.rs  spinner.rs
service/core_django/: Dockerfile  conftest.py  pyproject.toml  pytest.ini  requirements.txt  start.sh
service/core_django/apps/feeds/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
service/core_django/apps/notifications/: __init__.py  admin.py  models.py  serializers.py  services.py  urls.py  views.py
service/core_django/apps/posts/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
service/core_django/apps/search/: __init__.py  services.py  urls.py  views.py
service/core_django/apps/users/: admin.py  grpc_services.py  models.py  serializers.py  services.py  urls.py  users_urls.py  views.py
service/core_django/config/: asgi.py  celery.py  urls.py  wsgi.py
service/core_django/config/settings/: base.py  dev.py  prod.py
service/core_django/core/: __init__.py  exceptions.py  logging.py  middleware.py  models.py  pagination.py  permissions.py  utils.py  views.py
service/core_django/grpc_server/: interceptors.py  server.py
(+1547 files in other folders)
